--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ label{
     font-size: 1.1rem;
     font-weight: 600;
     border-radius: 12px;
+    display: none;
 }
 
 .error{
@@ -144,4 +145,5 @@ label{
     padding: 20px;
     border-radius: 15px;
     margin-top: 20px;
+    display: none;
 }
