--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ label{
 }
 
 .result{
-    background: linear-gradient(to right, #f093fb, #f5576c);
+    background: linear-gradient(to right, #fb9393, #f59e57);
     padding: 20px;
     margin-top: 30px;
     color: #fff;
