--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     height: 100vh;
     width: 100vw;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(to right, #940f0f, #4b0707);
+    background: #ff0000c0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -85,7 +85,7 @@ label{
 }
 
 .converter-btn{
-    background: linear-gradient(to right, #940f0f, #4b0707);
+    background: linear-gradient(to right, #f89393, #ff6262);
     color: #fff;
     border: none;
     padding: 15px 30px;
