--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     height: 100vh;
     width: 100vw;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: #ff0000c0;
+    background: #00000c;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -21,7 +21,7 @@ body{
     background-color: #fff;
     padding: 40px;
     border-radius: 20px;
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.103);
+    box-shadow: 0 20px 40px #00000c;
     width: 100%;
     max-width: 500px;
     text-align: center;
@@ -67,11 +67,17 @@ input, select{
     transition: all 0.3s ease;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 input:focus, select:focus{
     outline: none;
-    border-color: #ea6666;
+    border-color: #00000c;
     background-color: #fff;
-    box-shadow: 0 5px 15px rgba(234, 133, 102, 0.2);
+    box-shadow: 0 5px 15px #00000c4b;
     transform: translateY(-2px);
    
 }
@@ -85,7 +91,7 @@ label{
 }
 
 .converter-btn{
-    background: linear-gradient(to right, #f89393, #ff6262);
+    background: #00000c;
     color: #fff;
     border: none;
     padding: 15px 30px;
@@ -97,7 +103,7 @@ label{
     transition: all 0.3s ease;
 }
 .converter-btn:hover{
-    box-shadow: 0 8px 25px rgba(234, 133, 102, 0.2);
+    box-shadow: 0 8px 25px #00000c4b;
     transform: translateY(-2px);
 }
 
@@ -108,7 +114,7 @@ label{
 
 .spinner{
     border: 3px solid #f3f3f3;
-    border-top: 3px solid #ea6666;
+    border-top: 3px solid #00000c4b;
     border-radius: 50%;
     height: 30px;
     width: 30px;
@@ -129,7 +135,7 @@ label{
 }
 
 .result{
-    background: linear-gradient(to right, #fb9393, #f59e57);
+    background: #00000c;
     padding: 20px;
     margin-top: 30px;
     color: #fff;
